--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 <body class="bg">
 
 	<div class="container">
-		<div class="row">
+		<div class="row header">
 			<div class="col-md-2">
-				<img class="logo" src="assets/logo-white.png" alt="logo" />
+				<img class="logo" src="assets/logo.png" alt="logo" />
+			</div>
+			<div class="col-md-9 pull-right">
+				<p class="pull-right">info@adventurebags.com</p>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-9 content">
+			<div class="col-md-6 content">
 				<h1>Get out faster with Adventure Bags</h1>
 				<h4>Adventure Bags is streamlining the camping gear journey so you can focus on connecting with family and friends and the great outdoors.</h4>
 				<h5>Launching 2021</h5>
