--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="container">
 		<div class="row header">
 			<div class="col-md-2">
-				<img class="logo" src="assets/logo.png" alt="logo" />
+				<img class="logo" src="assets/logo_new.png" alt="logo" />
 			</div>
 			<div class="col-md-9 pull-right">
 				<p class="pull-right">info@adventurebags.com</p>
