--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 				<img class="logo" src="assets/logo_new.png" alt="logo" />
 			</div>
 			<div class="col-md-9 pull-right">
-				<p class="pull-right">info@adventurebags.com</p>
+				<p class="pull-right"><a href="mailto:info@adventurebags.com">info@adventurebags.com</a></p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-6 content">
 				<h1>Get out faster with Adventure Bags</h1>
 				<h4>Adventure Bags is streamlining the camping gear journey so you can focus on connecting with family and friends and the great outdoors.</h4>
-				<h5>Launching 2021</h5>
+				<h5><span>Launching 2021</span></h5>
 			</div>
 		</div>
 	</div>
